# RustCnOCR

./: Cargo.toml  README.md  build.rs  label_cn.txt
src/: lib.rs  main.rs  modle.cpp  modle.h
